--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -7,12 +7,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/xariskap/Neural-Network/blob/main/Genetic_Algorithm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xariskap/Computational-Intelligence/blob/main/Genetic_Algorithm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "EHpi0FLxpwD2"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "uY_0oF63p1qn"
       },
@@ -97,9 +97,7 @@
         "\n",
         "\n",
         "# cumpute tf-idf\n",
-        "for list in tf:\n",
-        "  tf_idf.append( list * idf )\n",
-        "  i += 1\n",
+        "tf_idf = tf * idf\n",
         "\n",
         "tf_idf = np.array(tf_idf)\n",
         "print(tf_idf.shape)"
@@ -107,32 +105,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 196,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kw1XTg8L0cbj",
-        "outputId": "c24ed1e0-6d30-493f-edbb-6c5a8bbe2449"
+        "outputId": "8f3351a0-587b-4fa4-ffe5-ea411237b6c7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(8520,)\n"
+            "1.8991174046676367\n"
           ]
         }
       ],
       "source": [
         "# tf_idf_mean\n",
-        "x = np.mean(tf_idf, axis = 0)\n",
-        "print(x.shape)"
+        "tf_idf_mean = np.mean(tf_idf, axis = 0)\n",
+        "print(sum(x))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "R86tbz0Bp4yS"
       },
@@ -167,32 +165,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 204,
       "metadata": {
+        "id": "2EDdN_y3qP7V",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2EDdN_y3qP7V",
-        "outputId": "7e1ca0d7-9e41-47cc-f734-a514257d0b00"
+        "outputId": "776e930a-3dab-4088-c878-a88af9ff5d4c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[[0 0 0 ... 0 0 1]\n",
-            " [1 1 1 ... 0 0 0]\n",
-            " [0 0 0 ... 0 0 1]\n",
-            " ...\n",
-            " [1 1 1 ... 0 0 0]\n",
-            " [1 0 1 ... 1 0 1]\n",
-            " [0 0 1 ... 0 0 0]]\n"
+            "4933\n",
+            "1.0869850601095699\n"
           ]
         }
       ],
       "source": [
         "def main():\n",
-        "    print(initialize_population(10))\n",
+        "    first_gen = initialize_population(1)\n",
+        "    laka = np.count_nonzero(first_gen)\n",
+        "    print(laka)\n",
+        "    calc = 0\n",
+        "    cnt = 0\n",
+        "    for inx,gene in enumerate(first_gen[0]):\n",
+        "      if gene == 1:\n",
+        "        calc += tf_idf_mean[inx]\n",
+        "      \n",
+        "    print(calc)\n",
+        "\n",
+        "    \n",
         "\n",
         "\n",
         "if __name__ == '__main__':\n",
@@ -206,7 +210,7 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyMvrEBgCKPQhM1z+ycbQObm",
+      "authorship_tag": "ABX9TyMX5ecQDp6zIh8vfSStTLgk",
       "include_colab_link": true
     },
     "kernelspec": {
