--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 205,
       "metadata": {
         "id": "EHpi0FLxpwD2"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 207,
       "metadata": {
         "id": "uY_0oF63p1qn"
       },
@@ -45,7 +45,14 @@
         "        return genome\n",
         "\n",
         "    def calculate_fitness(self):\n",
-        "        return 0"
+        "        global tf_idf_mean\n",
+        "\n",
+        "        fitness = 0\n",
+        "        for index, gene in enumerate(self.chromosome):\n",
+        "          if gene == 1:\n",
+        "            fitness += tf_idf_mean[index]\n",
+        "\n",
+        "        return fitness"
       ]
     },
     {
@@ -105,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 196,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 209,
       "metadata": {
         "id": "R86tbz0Bp4yS"
       },
@@ -158,6 +165,7 @@
         "        genome = Individual.create_genome()\n",
         "        # genome = genome_rejection(genome)\n",
         "        genome = repair_genome(genome)\n",
+        "        genome = Individual(genome)\n",
         "        population.append(genome)\n",
         "\n",
         "    return np.array(population)"
@@ -165,37 +173,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 204,
+      "execution_count": 220,
       "metadata": {
         "id": "2EDdN_y3qP7V",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "776e930a-3dab-4088-c878-a88af9ff5d4c"
+        "outputId": "581b839b-00a3-40b7-a27f-61d2305d59d2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4933\n",
-            "1.0869850601095699\n"
+            "0.9694953769934279    Number of genes: 4373\n",
+            "1.1778878535516    Number of genes: 5293\n",
+            "0.7243044964006926    Number of genes: 3260\n",
+            "0.19977768225030357    Number of genes: 1000\n",
+            "0.3608573476549052    Number of genes: 1543\n"
           ]
         }
       ],
       "source": [
         "def main():\n",
-        "    first_gen = initialize_population(1)\n",
-        "    laka = np.count_nonzero(first_gen)\n",
-        "    print(laka)\n",
-        "    calc = 0\n",
-        "    cnt = 0\n",
-        "    for inx,gene in enumerate(first_gen[0]):\n",
-        "      if gene == 1:\n",
-        "        calc += tf_idf_mean[inx]\n",
-        "      \n",
-        "    print(calc)\n",
-        "\n",
+        "    first_gen = initialize_population(5)\n",
+        "    for individual in first_gen:\n",
+        "      print(f'{individual.fitness} Number of genes: {np.count_nonzero(individual.chromosome)}')\n",
         "    \n",
         "\n",
         "\n",
@@ -210,7 +213,7 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyMX5ecQDp6zIh8vfSStTLgk",
+      "authorship_tag": "ABX9TyPupUNKihZVZ4iFIrucJ6K9",
       "include_colab_link": true
     },
     "kernelspec": {
