--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/xariskap/Computational-Intelligence/blob/main/Genetic_Algorithm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 205,
       "metadata": {
@@ -20,39 +10,6 @@
       "source": [
         "import random\n",
         "import numpy as np"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 207,
-      "metadata": {
-        "id": "uY_0oF63p1qn"
-      },
-      "outputs": [],
-      "source": [
-        "class Individual(object):\n",
-        "    def __init__(self, chromosome):\n",
-        "        self.chromosome = chromosome\n",
-        "        self.fitness = self.calculate_fitness()\n",
-        "\n",
-        "    @classmethod\n",
-        "    def create_genome(self):\n",
-        "\n",
-        "        genome = np.random.randint(0, 1, size=8520)\n",
-        "        rand_ones = random.randint(0, 8519)\n",
-        "        for _ in range(rand_ones):\n",
-        "            genome[random.randint(0, 8519)] = 1\n",
-        "        return genome\n",
-        "\n",
-        "    def calculate_fitness(self):\n",
-        "        global tf_idf_mean\n",
-        "\n",
-        "        fitness = 0\n",
-        "        for index, gene in enumerate(self.chromosome):\n",
-        "          if gene == 1:\n",
-        "            fitness += tf_idf_mean[index]\n",
-        "\n",
-        "        return fitness"
       ]
     },
     {
@@ -107,65 +64,81 @@
         "tf_idf = tf * idf\n",
         "\n",
         "tf_idf = np.array(tf_idf)\n",
-        "print(tf_idf.shape)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Kw1XTg8L0cbj",
-        "outputId": "8f3351a0-587b-4fa4-ffe5-ea411237b6c7"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1.8991174046676367\n"
-          ]
-        }
-      ],
-      "source": [
+        "print(tf_idf.shape)\n",
+        "\n",
         "# tf_idf_mean\n",
-        "tf_idf_mean = np.mean(tf_idf, axis = 0)\n",
-        "print(sum(x))"
+        "tf_idf_mean = np.mean(tf_idf, axis = 0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 209,
+      "source": [
+        "class Individual(object):\n",
+        "    def __init__(self, chromosome):\n",
+        "        self.chromosome = chromosome\n",
+        "        self.fitness = self.calculate_fitness()\n",
+        "\n",
+        "    @classmethod\n",
+        "    def create_genome(self):\n",
+        "\n",
+        "        genome = np.random.randint(0, 1, size=8520)\n",
+        "        rand_ones = random.randint(0, 8519)\n",
+        "        for _ in range(rand_ones):\n",
+        "            genome[random.randint(0, 8519)] = 1\n",
+        "        return genome\n",
+        "\n",
+        "    def genome_rejection(self):\n",
+        "      while np.sum(self.chromosome) < 1000:\n",
+        "        self.chromosome = self.create_genome()\n",
+        "      return self.chromosome\n",
+        "\n",
+        "\n",
+        "    def repair_genome(self):\n",
+        "      non_zeros = np.sum(self.chromosome)\n",
+        "      \n",
+        "      while non_zeros < 1000:  \n",
+        "        difference = 1000 - non_zeros\n",
+        "        for _ in range(difference):\n",
+        "            self.chromosome[random.randint(0, 8519)] = 1\n",
+        "\n",
+        "        non_zeros = np.sum(self.chromosome)\n",
+        "      \n",
+        "      return self.chromosome\n",
+        "\n",
+        "\n",
+        "    def calculate_fitness(self):\n",
+        "        global tf_idf_mean\n",
+        "\n",
+        "        fitness = 0\n",
+        "        for index, gene in enumerate(self.chromosome):\n",
+        "          if gene == 1:\n",
+        "            fitness += tf_idf_mean[index]\n",
+        "\n",
+        "        return fitness"
+      ],
+      "metadata": {
+        "id": "tLCbFWkk_a9s"
+      },
+      "execution_count": 274,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 275,
       "metadata": {
         "id": "R86tbz0Bp4yS"
       },
       "outputs": [],
       "source": [
-        "def genome_rejection(genome: Individual):\n",
-        "    while np.sum(genome) < 1000:\n",
-        "        genome = Individual.create_genome()\n",
-        "    return genome\n",
-        "\n",
-        "\n",
-        "def repair_genome(genome: Individual):\n",
-        "    nnz = np.sum(genome)\n",
-        "    while nnz < 1000:\n",
-        "        difference = 1000 - nnz\n",
-        "        for _ in range(difference):\n",
-        "            genome[random.randint(0, 8519)] = 1\n",
-        "        nnz = np.sum(genome)\n",
-        "    return genome\n",
-        "\n",
-        "\n",
         "def initialize_population(no_of_chromosomes):\n",
         "    population = []\n",
         "    for _ in range(no_of_chromosomes):\n",
         "        genome = Individual.create_genome()\n",
-        "        # genome = genome_rejection(genome)\n",
-        "        genome = repair_genome(genome)\n",
         "        genome = Individual(genome)\n",
+        "        \n",
+        "        #genome.genome_rejection()\n",
+        "        genome.repair_genome()\n",
+        "        \n",
         "        population.append(genome)\n",
         "\n",
         "    return np.array(population)"
@@ -173,34 +146,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
+      "execution_count": 296,
       "metadata": {
         "id": "2EDdN_y3qP7V",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "581b839b-00a3-40b7-a27f-61d2305d59d2"
+        "outputId": "85519a43-efc3-44fc-8c8a-ca1b4aa84d22"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.9694953769934279    Number of genes: 4373\n",
-            "1.1778878535516    Number of genes: 5293\n",
-            "0.7243044964006926    Number of genes: 3260\n",
-            "0.19977768225030357    Number of genes: 1000\n",
-            "0.3608573476549052    Number of genes: 1543\n"
+            "  0.4617668513724692 \tNumber of genes: 1967\n",
+            "  0.7510809890854054 \tNumber of genes: 3503\n",
+            "  1.1260143543771262 \tNumber of genes: 5233\n",
+            "  0.4578929335924628 \tNumber of genes: 2064\n",
+            " 0.21240791788479985 \tNumber of genes: 1000\n",
+            " 0.24894111179928488 \tNumber of genes: 1000\n",
+            "  0.9824990738209629 \tNumber of genes: 4295\n",
+            "  0.9952217281640351 \tNumber of genes: 4481\n",
+            "  0.8060874739998868 \tNumber of genes: 3629\n",
+            "  0.8165299190895785 \tNumber of genes: 3620\n"
           ]
         }
       ],
       "source": [
         "def main():\n",
-        "    first_gen = initialize_population(5)\n",
-        "    for individual in first_gen:\n",
-        "      print(f'{individual.fitness} Number of genes: {np.count_nonzero(individual.chromosome)}')\n",
+        "    first_gen = initialize_population(10)\n",
         "    \n",
-        "\n",
+        "    for individual in first_gen:\n",
+        "      print(f'{individual.fitness: >20} \\tNumber of genes: {np.count_nonzero(individual.chromosome)}')\n",
+        "    \n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
@@ -213,8 +191,7 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyPupUNKihZVZ4iFIrucJ6K9",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMFLgPTu09Jb/OHZvU9heFm"
     },
     "kernelspec": {
       "display_name": "Python 3",
