--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/xariskap/Computational-Intelligence/blob/main/Genetic_Algorithm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 205,
       "metadata": {
@@ -138,7 +148,7 @@
         "        \n",
         "        #genome.genome_rejection()\n",
         "        genome.repair_genome()\n",
-        "        \n",
+        "        # population consists Individual objects \n",
         "        population.append(genome)\n",
         "\n",
         "    return np.array(population)"
@@ -146,29 +156,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 296,
+      "execution_count": 312,
       "metadata": {
         "id": "2EDdN_y3qP7V",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "85519a43-efc3-44fc-8c8a-ca1b4aa84d22"
+        "outputId": "c2ed410d-86f4-4355-9842-b48c50915f73"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "  0.4617668513724692 \tNumber of genes: 1967\n",
-            "  0.7510809890854054 \tNumber of genes: 3503\n",
-            "  1.1260143543771262 \tNumber of genes: 5233\n",
-            "  0.4578929335924628 \tNumber of genes: 2064\n",
-            " 0.21240791788479985 \tNumber of genes: 1000\n",
-            " 0.24894111179928488 \tNumber of genes: 1000\n",
-            "  0.9824990738209629 \tNumber of genes: 4295\n",
-            "  0.9952217281640351 \tNumber of genes: 4481\n",
-            "  0.8060874739998868 \tNumber of genes: 3629\n",
-            "  0.8165299190895785 \tNumber of genes: 3620\n"
+            "0.060181861196144534\t (1000)\n",
+            " 0.809208263079247  \t (3566)\n",
+            " 1.153546498788296  \t (5126)\n",
+            " 0.6613147141344566 \t (3002)\n",
+            " 0.739003287226818  \t (3325)\n",
+            " 1.1751262319717786 \t (5283)\n",
+            " 1.1544174899505213 \t (5021)\n",
+            " 0.8886563102407132 \t (4047)\n",
+            "0.09723502344080319 \t (1000)\n",
+            " 1.106480132520064  \t (5011)\n"
           ]
         }
       ],
@@ -177,7 +187,7 @@
         "    first_gen = initialize_population(10)\n",
         "    \n",
         "    for individual in first_gen:\n",
-        "      print(f'{individual.fitness: >20} \\tNumber of genes: {np.count_nonzero(individual.chromosome)}')\n",
+        "      print(f\"{individual.fitness: ^20}\\t ({np.count_nonzero(individual.chromosome)})\")\n",
         "    \n",
         "\n",
         "if __name__ == '__main__':\n",
@@ -191,7 +201,8 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyMFLgPTu09Jb/OHZvU9heFm"
+      "authorship_tag": "ABX9TyPjgX/LMafuhqImjWFmlHsd",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
