--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 205,
+      "execution_count": 1,
       "metadata": {
         "id": "EHpi0FLxpwD2"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "yaID2gxzqC3-"
       },
@@ -34,10 +34,9 @@
         "tf = []\n",
         "tf_idf = []\n",
         "bag_of_words = []\n",
-        "count = 0\n",
+        "\n",
         "with open('/content/drive/MyDrive/Data/train-data.dat') as data:\n",
         "    for line in data:\n",
-        "        count += 1\n",
         "        tf_bag = [0 for _ in range(8520)]\n",
         "        bag = [0 for _ in range(8520)]\n",
         "        inline = line.strip().split()\n",
@@ -52,32 +51,27 @@
         "        for index, value in enumerate(bag):\n",
         "          tf_bag[index] = value / non_zero\n",
         "        tf.append(tf_bag)\n",
-        "        print(f'Data {count} completed!')\n",
         "\n",
-        "# compute idf\n",
         "np.array(bag_of_words)\n",
         "N = np.size(bag_of_words,0)\n",
         "M = np.size(bag_of_words,1)\n",
         "sum_d_t = (np.count_nonzero(bag_of_words, axis=0))\n",
         "\n",
-        "\n",
-        "for i in range(M):  \n",
-        "  idf.append( np.log10( N / sum_d_t[i]) )\n",
+        "# compute idf\n",
+        "for i in range(M):\n",
+        "    idf.append( np.log10( N / sum_d_t[i]) )\n",
         "\n",
         "tf = np.array(tf)\n",
         "idf = np.array(idf)\n",
-        "print(tf.shape)\n",
-        "print(idf.shape)\n",
-        "\n",
         "\n",
         "# cumpute tf-idf\n",
         "tf_idf = tf * idf\n",
-        "\n",
         "tf_idf = np.array(tf_idf)\n",
-        "print(tf_idf.shape)\n",
+        "\n",
         "\n",
         "# tf_idf_mean\n",
-        "tf_idf_mean = np.mean(tf_idf, axis = 0)"
+        "tf_idf_mean = np.mean(tf_idf, axis = 0)\n",
+        "max_fitness = (sum(tf_idf_mean))"
       ]
     },
     {
@@ -90,51 +84,64 @@
         "\n",
         "    @classmethod\n",
         "    def create_genome(self):\n",
-        "\n",
         "        genome = np.random.randint(0, 1, size=8520)\n",
         "        rand_ones = random.randint(0, 8519)\n",
         "        for _ in range(rand_ones):\n",
-        "            genome[random.randint(0, 8519)] = 1\n",
+        "            index = random.randint(0, 8519)\n",
+        "            \n",
+        "            while genome[index] == 1:\n",
+        "                index = random.randint(0, 8519)\n",
+        "            \n",
+        "            genome[index] = 1\n",
+        "    \n",
+        "                \n",
         "        return genome\n",
         "\n",
         "    def genome_rejection(self):\n",
-        "      while np.sum(self.chromosome) < 1000:\n",
-        "        self.chromosome = self.create_genome()\n",
-        "      return self.chromosome\n",
+        "        while np.sum(self.chromosome) < 1000:\n",
+        "            self.chromosome = self.create_genome()\n",
+        "        \n",
+        "        return self.chromosome\n",
         "\n",
         "\n",
         "    def repair_genome(self):\n",
-        "      non_zeros = np.sum(self.chromosome)\n",
-        "      \n",
-        "      while non_zeros < 1000:  \n",
-        "        difference = 1000 - non_zeros\n",
-        "        for _ in range(difference):\n",
-        "            self.chromosome[random.randint(0, 8519)] = 1\n",
         "\n",
         "        non_zeros = np.sum(self.chromosome)\n",
-        "      \n",
-        "      return self.chromosome\n",
+        "        \n",
+        "        while non_zeros < 1000:  \n",
+        "            difference = 1000 - non_zeros\n",
+        "            for _ in range(difference):\n",
+        "                self.chromosome[random.randint(0, 8519)] = 1\n",
         "\n",
+        "            non_zeros = np.sum(self.chromosome)\n",
+        "        \n",
+        "        return self.chromosome\n",
         "\n",
+        "    \n",
         "    def calculate_fitness(self):\n",
+        "        global max_fitness\n",
         "        global tf_idf_mean\n",
         "\n",
         "        fitness = 0\n",
         "        for index, gene in enumerate(self.chromosome):\n",
-        "          if gene == 1:\n",
-        "            fitness += tf_idf_mean[index]\n",
+        "            if gene == 1:\n",
+        "                fitness += tf_idf_mean[index]\n",
+        "\n",
+        "        if np.count_nonzero(self.chromosome) > 2000:\n",
+        "            percentage = ((np.count_nonzero(self.chromosome) // 100) / 100)\n",
+        "            fitness -= percentage * max_fitness\n",
         "\n",
         "        return fitness"
       ],
       "metadata": {
         "id": "tLCbFWkk_a9s"
       },
-      "execution_count": 274,
+      "execution_count": 63,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 275,
+      "execution_count": 24,
       "metadata": {
         "id": "R86tbz0Bp4yS"
       },
@@ -148,48 +155,28 @@
         "        \n",
         "        #genome.genome_rejection()\n",
         "        genome.repair_genome()\n",
-        "        # population consists Individual objects \n",
-        "        population.append(genome)\n",
+        "        \n",
+        "        population.append(genome)  # population (list) consists Individual objects \n",
         "\n",
         "    return np.array(population)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 312,
+      "execution_count": null,
       "metadata": {
-        "id": "2EDdN_y3qP7V",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c2ed410d-86f4-4355-9842-b48c50915f73"
+        "id": "2EDdN_y3qP7V"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.060181861196144534\t (1000)\n",
-            " 0.809208263079247  \t (3566)\n",
-            " 1.153546498788296  \t (5126)\n",
-            " 0.6613147141344566 \t (3002)\n",
-            " 0.739003287226818  \t (3325)\n",
-            " 1.1751262319717786 \t (5283)\n",
-            " 1.1544174899505213 \t (5021)\n",
-            " 0.8886563102407132 \t (4047)\n",
-            "0.09723502344080319 \t (1000)\n",
-            " 1.106480132520064  \t (5011)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def main():\n",
-        "    first_gen = initialize_population(10)\n",
+        "    first_gen = initialize_population(100)\n",
         "    \n",
-        "    for individual in first_gen:\n",
-        "      print(f\"{individual.fitness: ^20}\\t ({np.count_nonzero(individual.chromosome)})\")\n",
-        "    \n",
+        "    sorted_arr = sorted(first_gen, key=lambda x: x.fitness)\n",
+        "    for individual in sorted_arr:\n",
+        "        print(f\"{individual.fitness: <20}\\t {np.count_nonzero(individual.chromosome)} genes\")\n",
         "\n",
+        "    \n",
         "if __name__ == '__main__':\n",
         "    main()\n"
       ]
@@ -201,7 +188,7 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyPjgX/LMafuhqImjWFmlHsd",
+      "authorship_tag": "ABX9TyNFAOrOBhzY1LbPRQ9HCb/T",
       "include_colab_link": true
     },
     "kernelspec": {
