--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/xariskap/Computational-Intelligence/blob/main/Genetic_Algorithm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -136,12 +126,12 @@
       "metadata": {
         "id": "tLCbFWkk_a9s"
       },
-      "execution_count": 63,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 146,
       "metadata": {
         "id": "R86tbz0Bp4yS"
       },
@@ -158,24 +148,79 @@
         "        \n",
         "        population.append(genome)  # population (list) consists Individual objects \n",
         "\n",
-        "    return np.array(population)"
+        "    return np.array(population)\n",
+        "\n",
+        "def roulette_wheel_selection(population: list):\n",
+        "    \n",
+        "    population_fitness = sum([chromosome.fitness for chromosome in population])\n",
+        "    \n",
+        "    s = 0\n",
+        "    random_number = random.randint(0, int(population_fitness))\n",
+        "    \n",
+        "    for individual in population:\n",
+        "        s += individual.fitness\n",
+        "        if s >= random_number:\n",
+        "            return individual\n",
+        "\n",
+        "def tournament_selection(population: list):\n",
+        "    k = 5\n",
+        "    selected_parents = []\n",
+        "    for individual in range(k):\n",
+        "        index = random.randint(0, len(population) - 1)\n",
+        "        selected_parents.append(population[index])\n",
+        "    \n",
+        "    sorted_parents = sorted(selected_parents, key=lambda x: x.fitness, reverse = True)\n",
+        "    first_parent, second_parent = sorted_parents[0], sorted_parents[1]\n",
+        "\n",
+        "    return first_parent, second_parent\n",
+        "\n",
+        "def single_point_crossover(first_parent, second_parent, point):\n",
+        "    p1 = np.append(first_parent[:point], second_parent[point:])\n",
+        "    p2 = np.append(second_parent[:point], first_parent[point:])\n",
+        "\n",
+        "    return p1, p2\n",
+        "\n",
+        "def mate(first_parent, second_parent, pivot_points):\n",
+        "    points = random.sample(range(len(first_parent)), pivot_points)\n",
+        "    sorted(points)\n",
+        "    \n",
+        "    for point in points:\n",
+        "        first_parent, second_parent = single_point_crossover(first_parent, second_parent, point)\n",
+        "    return first_parent, second_parent"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 145,
       "metadata": {
-        "id": "2EDdN_y3qP7V"
+        "id": "2EDdN_y3qP7V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02e93466-0c0c-4dbd-9cf4-84ff6104e76a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.2748066178356974 0.2693306961508639\n"
+          ]
+        }
+      ],
       "source": [
         "def main():\n",
         "    first_gen = initialize_population(100)\n",
         "    \n",
-        "    sorted_arr = sorted(first_gen, key=lambda x: x.fitness)\n",
-        "    for individual in sorted_arr:\n",
-        "        print(f\"{individual.fitness: <20}\\t {np.count_nonzero(individual.chromosome)} genes\")\n",
+        "    #sorted_arr = sorted(first_gen, key=lambda x: x.fitness, reverse = True)\n",
+        "    #for individual in sorted_arr:\n",
+        "     #   print(f\"{individual.fitness: <20}\\t {np.count_nonzero(individual.chromosome)} genes\")\n",
         "\n",
+        "    # for _ in range(2):\n",
+        "    #     parent = roulette_wheel_selection(first_gen)\n",
+        "    #     print(parent.fitness)\n",
+        "\n",
+        "    print(tournament_selection(first_gen)[0].fitness,tournament_selection(first_gen)[1].fitness)\n",
         "    \n",
         "if __name__ == '__main__':\n",
         "    main()\n"
@@ -188,8 +233,7 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyNFAOrOBhzY1LbPRQ9HCb/T",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOEA2773YNJArfYpqobqeuL"
     },
     "kernelspec": {
       "display_name": "Python 3",
