--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/xariskap/Computational-Intelligence/blob/main/Genetic_Algorithm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -87,12 +97,6 @@
         "                \n",
         "        return genome\n",
         "\n",
-        "    def genome_rejection(self):\n",
-        "        while np.sum(self.chromosome) < 1000:\n",
-        "            self.chromosome = self.create_genome()\n",
-        "        \n",
-        "        return self.chromosome\n",
-        "\n",
         "\n",
         "    def repair_genome(self):\n",
         "\n",
@@ -105,6 +109,14 @@
         "\n",
         "            non_zeros = np.sum(self.chromosome)\n",
         "        \n",
+        "        return self.chromosome\n",
+        "\n",
+        "    def mutate(self):\n",
+        "        no_to_mutate = (10 * len(self.chromosome)) // 100\n",
+        "        for _ in range(no_to_mutate):\n",
+        "            random_index = random.randint(0, len(self.chromosome) - 1)\n",
+        "            self.chromosome[random_index] = int(not self.chromosome[random_index])\n",
+        "\n",
         "        return self.chromosome\n",
         "\n",
         "    \n",
@@ -126,12 +138,12 @@
       "metadata": {
         "id": "tLCbFWkk_a9s"
       },
-      "execution_count": 3,
+      "execution_count": 118,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 110,
       "metadata": {
         "id": "R86tbz0Bp4yS"
       },
@@ -150,17 +162,17 @@
         "\n",
         "    return np.array(population)\n",
         "\n",
-        "def roulette_wheel_selection(population: list):\n",
+        "# def roulette_wheel_selection(population: list):\n",
         "    \n",
-        "    population_fitness = sum([chromosome.fitness for chromosome in population])\n",
+        "#     population_fitness = sum([chromosome.fitness for chromosome in population])\n",
         "    \n",
-        "    s = 0\n",
-        "    random_number = random.randint(0, int(population_fitness))\n",
+        "#     s = 0\n",
+        "#     random_number = random.randint(0, int(population_fitness))\n",
         "    \n",
-        "    for individual in population:\n",
-        "        s += individual.fitness\n",
-        "        if s >= random_number:\n",
-        "            return individual\n",
+        "#     for individual in population:\n",
+        "#         s += individual.fitness\n",
+        "#         if s >= random_number:\n",
+        "#             return individual\n",
         "\n",
         "def tournament_selection(population: list):\n",
         "    k = 5\n",
@@ -174,37 +186,50 @@
         "\n",
         "    return first_parent, second_parent\n",
         "\n",
-        "def single_point_crossover(first_parent, second_parent, point):\n",
-        "    p1 = np.append(first_parent[:point], second_parent[point:])\n",
-        "    p2 = np.append(second_parent[:point], first_parent[point:])\n",
+        "def mate(papa: Individual, mama: Individual, p_cross):\n",
+        "    points = random.sample(range(len(mama.chromosome)), 2)\n",
+        "    points = sorted(points)\n",
         "\n",
-        "    return p1, p2\n",
+        "    papa_copy = papa.chromosome.copy()\n",
+        "    mama_copy = mama.chromosome.copy()\n",
         "\n",
-        "def mate(first_parent, second_parent, pivot_points):\n",
-        "    points = random.sample(range(len(first_parent)), pivot_points)\n",
-        "    sorted(points)\n",
-        "    \n",
-        "    for point in points:\n",
-        "        first_parent, second_parent = single_point_crossover(first_parent, second_parent, point)\n",
-        "    return first_parent, second_parent"
+        "    if random.random() <= p_cross:\n",
+        "        papa.chromosome[0:points[0]] = mama_copy[0:points[0]]\n",
+        "        mama.chromosome[0:points[0]] = papa_copy[0:points[0]]\n",
+        "        papa.chromosome[points[1]:] = mama_copy[points[1]:]\n",
+        "        mama.chromosome[points[1]:] = papa_copy[points[1]:]\n",
+        "\n",
+        "    first_child, second_child = papa, mama\n",
+        "    return first_child, second_child\n",
+        "\n",
+        "def mutate(child: Individual, p_mutate):\n",
+        "    #if random.random() <= p_mutate:\n",
+        "    no_to_mutate = (10 * len(child.chromosome)) // 100\n",
+        "    for _ in range(no_to_mutate):\n",
+        "        random_index = random.randint(0, 8519)\n",
+        "        child.chromosome[random_index] = int(not child.chromosome[random_index])\n",
+        "\n",
+        "    new_child = Individual(child)\n",
+        "    return new_child\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 123,
       "metadata": {
         "id": "2EDdN_y3qP7V",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02e93466-0c0c-4dbd-9cf4-84ff6104e76a"
+        "outputId": "a9d9465f-6e17-40c8-b341-528c4f6c8cc5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.2748066178356974 0.2693306961508639\n"
+            "0.2395827053506489\n",
+            "0.2395827053506489\n"
           ]
         }
       ],
@@ -216,15 +241,31 @@
         "    #for individual in sorted_arr:\n",
         "     #   print(f\"{individual.fitness: <20}\\t {np.count_nonzero(individual.chromosome)} genes\")\n",
         "\n",
-        "    # for _ in range(2):\n",
-        "    #     parent = roulette_wheel_selection(first_gen)\n",
-        "    #     print(parent.fitness)\n",
         "\n",
-        "    print(tournament_selection(first_gen)[0].fitness,tournament_selection(first_gen)[1].fitness)\n",
+        "    papa, mama = tournament_selection(first_gen)\n",
+        "\n",
+        "    boy, girl  = mate(papa,mama,1)\n",
+        "    print(boy.fitness)\n",
+        "    kakarot = Individual(boy.mutate())\n",
+        "    print(boy.fitness)\n",
         "    \n",
+        "\n",
+        "    \n",
+        "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "AHVxLcze5L9p"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -233,7 +274,8 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyOEA2773YNJArfYpqobqeuL"
+      "authorship_tag": "ABX9TyO/KO92Y6cy9oIm4yCRlOgX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
