--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -111,14 +111,6 @@
         "        \n",
         "        return self.chromosome\n",
         "\n",
-        "    def mutate(self):\n",
-        "        no_to_mutate = (10 * len(self.chromosome)) // 100\n",
-        "        for _ in range(no_to_mutate):\n",
-        "            random_index = random.randint(0, len(self.chromosome) - 1)\n",
-        "            self.chromosome[random_index] = int(not self.chromosome[random_index])\n",
-        "\n",
-        "        return self.chromosome\n",
-        "\n",
         "    \n",
         "    def calculate_fitness(self):\n",
         "        global max_fitness\n",
@@ -187,6 +179,7 @@
         "    return first_parent, second_parent\n",
         "\n",
         "def mate(papa: Individual, mama: Individual, p_cross):\n",
+        "    # 2-point crossover\n",
         "    points = random.sample(range(len(mama.chromosome)), 2)\n",
         "    points = sorted(points)\n",
         "\n",
@@ -204,13 +197,14 @@
         "\n",
         "def mutate(child: Individual, p_mutate):\n",
         "    #if random.random() <= p_mutate:\n",
-        "    no_to_mutate = (10 * len(child.chromosome)) // 100\n",
+        "    no_to_mutate = (5 * len(child.chromosome)) // 100\n",
         "    for _ in range(no_to_mutate):\n",
         "        random_index = random.randint(0, 8519)\n",
+        "        \n",
         "        child.chromosome[random_index] = int(not child.chromosome[random_index])\n",
         "\n",
-        "    new_child = Individual(child)\n",
-        "    return new_child\n"
+        "    child.fitness = child.calculate_fitness()\n",
+        "    return child\n"
       ]
     },
     {
@@ -246,9 +240,7 @@
         "\n",
         "    boy, girl  = mate(papa,mama,1)\n",
         "    print(boy.fitness)\n",
-        "    kakarot = Individual(boy.mutate())\n",
-        "    print(boy.fitness)\n",
-        "    \n",
+        "    print()\n",
         "\n",
         "    \n",
         "\n",
@@ -274,7 +266,7 @@
       "name": "Genetic  Algorithm.ipynb",
       "provenance": [],
       "mount_file_id": "1kO-jok7-8J5kdfGRDWn6wcGCcqp1mQhM",
-      "authorship_tag": "ABX9TyO/KO92Y6cy9oIm4yCRlOgX",
+      "authorship_tag": "ABX9TyO42uVW5sTDfe8sl2dgRV7V",
       "include_colab_link": true
     },
     "kernelspec": {
